--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/algo7/express-suite#readme",
   "devDependencies": {
+    "axios": "^0.19.2",
     "express": "^4.17.1",
     "jest": "^26.0.1"
   },
