remove unecessary dependencies / edit readme

--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
   "devDependencies": {
     "axios": "^0.19.2",
     "express": "^4.17.1",
-    "jest": "^26.0.1"
-  },
-  "dependencies": {
+    "jest": "^26.0.1",
     "body-parser": "^1.19.0"
   }
 }
