--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "keywords": [
     "express",
     "middlewares",
-    "validation"
+    "validation",
+    "input"
   ],
   "author": "algo7",
   "license": "Apache License 2.0",
