--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
   },
   "homepage": "https://github.com/algo7/express-suite#readme",
   "devDependencies": {
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "jest": "^26.0.1",
-    "body-parser": "^1.19.0"
+    "jest": "^26.0.1"
   },
   "jest": {
     "verbose": true,
